--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ pre {
 }
 
 /* Input Field */
-/* 💡 Apply Glow Effect to Input Text */
 #input {
+    width: 50%;
     font-family: 'Fira Code', monospace;
     font-size: 14px;
     color: #00FF00;
